# rust

./: .gitignore  README.md
AED/collections/: Cargo.toml
AED/collections/benches/output/: set.csv
AED/collections/src/: lib.rs
AED/collections/src/benches/: core.rs  mod.rs  set.rs
AED/collections/src/queue/: mod.rs
AED/collections/src/seq/: array_seq.rs  mod.rs
AED/collections/src/set/: bst_avl_set.rs  bst_rb_set.rs  bst_set.rs  hash_chaining_set.rs  hash_probing_set.rs  list_set.rs  mod.rs
AED/collections/src/stack/: mod.rs
AED/collections/tests/: seq.rs  set.rs
AED1/collections/src/: lib.rs
AED1/collections/tests/: queue.rs  set.rs  stack.rs
AED1/queue/src/: array.rs  lib.rs  list.rs  tad.rs
AED1/queue/tests/: utests.rs
IAA/duplicates/: Cargo.toml
IAA/duplicates/src/: lib.rs
IAA/duplicates/src/algorithms/: linear_seen.rs  mod.rs  naive.rs
IAA/duplicates/src/benches/: core.rs  duplicates.rs  mod.rs
IAA/duplicates/tests/: test_duplicates.rs
IAA/primes/: Cargo.toml
IAA/primes/src/: lib.rs
IAA/primes/src/algorithms/: mod.rs  primes.rs
IAA/primes/src/bench_utils/: core.rs  mod.rs  prime_benches.rs  workloads.rs
IAA/primes/tests/: prime_tests.rs
IAA/search/: Cargo.toml
IAA/search/src/algorithms/: binary.rs  linear.rs  mod.rs
IAA/search/src/bench_utils/: core.rs  mod.rs  workloads.rs
IAA/search/tests/: test_search.rs
IAA/sorting/: Cargo.toml
IAA/sorting/benches/output/: regression.csv  sort.csv
IAA/sorting/src/: lib.rs
IAA/sorting/src/algorithms/: bubble.rs  bucket.rs  counting.rs  heap.rs  insertion.rs  merge.rs  mod.rs  quick.rs  radix.rs  rust.rs  selection.rs
IAA/sorting/src/benches/: bucket.rs  core.rs  linear.rs  mod.rs  sort.rs
IAA/sorting/tests/: sorts.rs
IP/array/src/: main.rs
IP/condicionais/: Cargo.toml
IP/logica/: Cargo.toml
IP/recursao/: Cargo.toml
IP/referencia/: Cargo.toml
IP/sum-numbers/: Cargo.toml
array/: Cargo.toml
funcoes/: Cargo.toml
funcoes/src/: main.rs
lacos/: Cargo.toml
lista-ligada/: Cargo.toml
logica/src/: main.rs
plot/: Cargo.toml
plot/src/: lib.rs  plot.rs
plot/tests/: plot.rs  regression.rs
recursao/src/: main.rs
sum-numbers/src/: main.rs
(+19 files in other folders)
