[package]
name = "collections"
version = "0.1.0"
edition = "2021"

[lib]
name = "collections"
path = "src/lib.rs"

[[bin]]
name = "bench_set"
path = "benches/bin/set.rs"

[[bin]]
name = "plot_sets"
path = "benches/bin/plot_sets.rs"

[dependencies]
rand = "0.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
plotters = { version = "0.3" }
