[package]
name = "duplicates"
version = "0.1.0"
edition = "2021"

[lib]
name = "duplicates"
path = "src/lib.rs"

[[bench]]
name = "bench_duplicates"
path = "benches/bin/bench_duplicates.rs"
harness = false

[[bench]]
name = "plot_duplicates"
path = "benches/bin/plot_duplicates.rs"
harness = false

[dependencies]
rand = "0.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
plotters = { version = "0.3" }

