[package]
name = "primes"
version = "0.1.0"
edition = "2021"

[lib]
name = "primes"
path = "src/lib.rs"

[[bench]]
name = "bench_primes"
path = "benches/bin/bench_primes.rs"
harness = false

[[bench]]
name = "plot_primes"
path = "benches/bin/plot_primes.rs"
harness = false

[dependencies]
rand = "0.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
plotters = { version = "0.3" }
