[package]
name = "search"
version = "0.1.0"
edition = "2021"

[lib]
name = "search"
path = "src/lib.rs"

[[bench]]
name = "bench_search"
path = "benches/bin/bench_search.rs"
harness = false

[[bench]]
name = "plot_search"
path = "benches/bin/plot_search.rs"
harness = false

[dependencies]
rand = "0.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
plotters = { version = "0.3" }
