[package]
name = "sorting"
version = "0.1.0"
edition = "2021"

[lib]
name = "sorting"
path = "src/lib.rs"

[[bench]]
name = "bench_sort"
path = "benches/bin/sort.rs"
harness = false

[[bench]]
name = "plot_sorts"
path = "benches/bin/plot_sorts.rs"
harness = false

[dependencies]
rand = "0.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
plotters = { version = "0.3" }
